--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root {
   --primary: #0f766e;
+  --primary-shade: #115e59;
   --gray-50: #f9fafb;
   --gray-100: #f3f4f6;
   --gray-200: #e5e7eb;
@@ -18,7 +19,6 @@
 
 body {
   font-family: "Inter", sans-serif;
-  font-size: 1rem;
   background-color: var(--gray-100);
   color: var(--gray-900);
 }
@@ -27,38 +27,54 @@ p {
   margin: 0;
 }
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  padding: 0.5rem 0.75rem;
+dialog {
+  border: none;
+  padding: 1.5rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow);
+  transition: all 0.2s ease;
+}
+
+#closeModal {
+  width: 100%;
+  margin-top: 0.5rem;
+}
+
+.btn {
+  padding: 0.75rem 1rem;
   font-size: 0.875rem;
-  line-height: 1.25rem;
   font-weight: 600;
   border-radius: 0.375rem;
   color: var(--gray-900);
   cursor: pointer;
   transition: all 0.2s ease;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  border: 1px solid var(--gray-300);
 }
 
 .btn-primary {
-  font-size: 0.875rem;
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   background-color: var(--primary);
-  border: none;
   color: white;
+  border-color: var(--primary);
+}
+
+.btn-primary:hover {
+  background-color: var(--primary-shade);
+  border-color: var(--primary-shade);
 }
 
 .btn-secondary {
-  font-size: 0.875rem;
   color: var(--gray-950);
   background-color: white;
-  border: 1px solid var(--gray-300);
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
 }
 
 .btn-secondary:hover {
   background-color: var(--gray-50);
+}
+
+.logo {
+  font-size: 1.5rem;
 }
 
 .container {
@@ -90,6 +106,19 @@ button,
   margin-top: 1rem;
 }
 
+header {
+  background-color: white;
+  box-shadow: var(--shadow);
+  padding: 0.25rem;
+  margin-bottom: 1rem;
+}
+
+header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .book-title {
   font-size: 1.25rem;
   font-weight: 600;
@@ -97,7 +126,7 @@ button,
 
 .book-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: max-content;
   gap: 1rem;
   margin-bottom: 2rem;
@@ -105,19 +134,16 @@ button,
 
 form {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 1rem;
-  margin-bottom: 1rem;
-  padding: 1.5rem;
-  background-color: white;
-  border-radius: 0.5rem;
-  box-shadow: var(--shadow);
+  grid-auto-rows: auto;
+  gap: 0.5rem;
 }
 
 input,
 select {
   border-radius: 0.375rem;
   line-height: 1.25rem;
+  min-height: 1.25rem;
+  height: 100%;
   padding: 0.5rem;
   font-size: 0.875rem;
   color: var(--gray-950);
