--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 :root {
   --primary: #0f766e;
   --primary-shade: #115e59;
+  --red: #ef4444;
+  --red-shade: #dc2626;
   --gray-50: #f9fafb;
   --gray-100: #f3f4f6;
   --gray-200: #e5e7eb;
@@ -31,9 +33,15 @@ dialog {
   border: none;
   padding: 1.5rem;
   background-color: white;
+  width: 50vw;
+  max-width: 25rem;
   border-radius: 0.5rem;
   box-shadow: var(--shadow);
   transition: all 0.2s ease;
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.5);
 }
 
 #closeModal {
@@ -51,6 +59,12 @@ dialog {
   transition: all 0.2s ease;
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   border: 1px solid var(--gray-300);
+}
+
+.btn-group {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.5rem;
 }
 
 .btn-primary {
@@ -71,6 +85,17 @@ dialog {
 
 .btn-secondary:hover {
   background-color: var(--gray-50);
+}
+
+.btn-red {
+  color: white;
+  border-color: var(--red);
+  background-color: var(--red);
+}
+
+.btn-red:hover {
+  background-color: var(--red-shade);
+  border-color: var(--red-shade);
 }
 
 .logo {
@@ -100,10 +125,11 @@ dialog {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  justify-items: stretch;
 }
 
-.card-body button {
-  margin-top: 1rem;
+.card-body p:last-of-type {
+  margin-bottom: 1rem;
 }
 
 header {
@@ -138,14 +164,13 @@ form {
   gap: 0.5rem;
 }
 
-input,
-select {
+form input,
+form select {
   border-radius: 0.375rem;
   line-height: 1.25rem;
   min-height: 1.25rem;
   height: 100%;
   padding: 0.5rem;
-  font-size: 0.875rem;
   color: var(--gray-950);
   background-color: white;
   border: 1px solid var(--gray-300);
